--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -535,10 +535,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c2e20da0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "幾何型別分佈：\n",
+      "LineString    103681\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "疑似有問題的筆數：0\n",
+      "Series([], Name: bad_geom_types, dtype: int64)\n",
+      "\n",
+      "前 10 筆問題索引：[]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\1106237097.py:57: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  gef_routesegment.to_file(routesegment_filepath,\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
+      "  write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'RouteName_Zh' to 'RouteName_'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
+      "  ogr_write(\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteName_Zh' to 'SubRouteNa'\n",
+      "  ogr_write(\n"
+     ]
+    }
+   ],
    "source": [
     "# 03-02 拆分路線\n",
     "routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\"))\n",
