fix:將預處理01、預處理02轉存為function

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -257,13 +257,12 @@
     "\n",
     "    return df_stops\n",
     "\n",
-    "\n",
     "# 02_資料分析處理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -282,30 +281,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4b02f38d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 預處理01: 指定時間區間票證資料切分\n",
-    "orginal_ticket_files = [\n",
-    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\公路客運電子票證資料(TO1A)\\公路客運電子票證資料(TO1A).csv', \n",
-    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\新北市公車電子票證資料(TO1A)\\新北市公車電子票證資料(TO1A).csv', \n",
-    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO1A)\\桃園市公車電子票證資料(TO1A).csv', \n",
-    "                        r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO2A)\\桃園市公車電子票證資料(TO2A).csv'\n",
-    "                        ]\n",
-    "for file in orginal_ticket_files:\n",
-    "        output = filter_ticket_data(\n",
-    "                    filepath = file,\n",
-    "                    infodate_column = 'InfoDate',\n",
-    "                    selectdate_start = selectdate_start,\n",
-    "                    selectdate_end = selectdate_end,\n",
-    "                    outputfolder = selecttime_ticket_folder,\n",
-    "                    skiprows = 1,\n",
-    "                    chunksize = 1000\n",
-    "                )\n",
-    "        \n",
-    "        print(\"輸出路徑：\", output)"
+    "def split_ticket_with_day(selectdate_start, selectdate_end, outputfolder):\n",
+    "        orginal_ticket_files = [\n",
+    "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\公路客運電子票證資料(TO1A)\\公路客運電子票證資料(TO1A).csv', \n",
+    "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\新北市公車電子票證資料(TO1A)\\新北市公車電子票證資料(TO1A).csv', \n",
+    "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO1A)\\桃園市公車電子票證資料(TO1A).csv', \n",
+    "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO2A)\\桃園市公車電子票證資料(TO2A).csv'\n",
+    "                                ]\n",
+    "        for file in orginal_ticket_files:\n",
+    "                output = filter_ticket_data(\n",
+    "                        filepath = file,\n",
+    "                        infodate_column = 'InfoDate',\n",
+    "                        selectdate_start = selectdate_start,\n",
+    "                        selectdate_end = selectdate_end,\n",
+    "                        outputfolder = outputfolder,\n",
+    "                        skiprows = 1,\n",
+    "                        chunksize = 1000\n",
+    "                        )\n",
+    "                print(\"輸出路徑：\", output)\n",
+    "# split_ticket_with_day(selectdate_start, selectdate_end, selecttime_ticket_folder)"
    ]
   },
   {
@@ -316,6 +316,8 @@
    "outputs": [],
    "source": [
     "# 預處理02: 指定時間區間票證資料切分\n",
+    "# def get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder):\n",
+    "\n",
     "selecttime_ticket_files = findfiles(selecttime_ticket_folder, filetype='.csv', recursive=False)\n",
     "correctratelog_path = os.path.join(checkok_ticketfolder, '客運票證資料正確率記錄.txt')\n",
     "\n",
