--- a/01_TDX資料下載.ipynb
+++ b/01_TDX資料下載.ipynb
@@ -121,7 +121,7 @@
     "        time.sleep(60)\n",
     "\n",
     "    '''下載公路客運站序資料'''\n",
-    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/InterCity?%24format=XML\"\n",
+    "    url = \"https://tdx.transportdata.tw/api/basic/v2/Bus/StopOfRoute/InterCity?%24format=XML\"\n",
     "    output_folder = busstopseq_folder\n",
     "    output_file_name = f\"公路客運站序資料_{downloaddate}.xml\"\n",
     "    tdx_data_download(\n",
@@ -135,7 +135,7 @@
     "    time.sleep(60)\n",
     "\n",
     "    '''下載公路客運shp資料'''\n",
-    "    url = f\"https://tdx.transportdata.tw/api/basic/v2/Bus/Shape/InterCity?%24format=XML\"\n",
+    "    url = \"https://tdx.transportdata.tw/api/basic/v2/Bus/Shape/InterCity?%24format=XML\"\n",
     "    output_folder = busroute_folder\n",
     "    output_file_name = f\"公路客運路線資料_{downloaddate}.xml\"\n",
     "    tdx_data_download(\n",
