fix:修正03-02程式碼位置

--- a/02_公車路線shp拆分.ipynb
+++ b/02_公車路線shp拆分.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "23e79f3d",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "4658bda7",
    "metadata": {},
    "outputs": [
@@ -433,9 +433,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\3632634035.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_24040\\3632634035.py:162: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\3632634035.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
+      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_24040\\3632634035.py:165: FutureWarning: errors='ignore' is deprecated and will raise in a future version. Use to_numeric without passing `errors` and catch exceptions explicitly instead\n",
       "  df[col] = pd.to_numeric(df[col], errors=\"ignore\")\n"
      ]
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "e0a78a03",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "164ae355",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "5b4f21eb",
    "metadata": {},
    "outputs": [
@@ -495,11 +495,11 @@
      "text": [
       "只在 df_route 出現的 RouteUID：0\n",
       "只在 df_seq 出現的 RouteUID：10\n",
-      "兩邊都有的 RouteUID：1530\n",
+      "兩邊都有的 RouteUID：2025\n",
       "-----------\n",
       "只在 df_route 出現的 SubRouteUID：1\n",
       "只在 df_seq 出現的 SubRouteUID：1372\n",
-      "兩邊都有的 SubRouteUID：814\n"
+      "兩邊都有的 SubRouteUID：2587\n"
      ]
     }
    ],
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "0dda771e",
    "metadata": {},
    "outputs": [],
@@ -527,54 +527,23 @@
     "gdf_route = gpd.GeoDataFrame(df_route, geometry=\"Geometry\", crs=\"EPSG:4326\") # 建立 GeoDataFrame\n",
     "gdf_route.rename(columns={'Geometry':'geometry'}, inplace=True) \n",
     "\n",
-    "gdf_seq = dataframe_to_point(df_seq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")\n",
-    "\n",
-    "gdf_route_selectbySubRouteUID = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
-    "gdf_seq_selectbySubRouteUID = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)"
+    "gdf_seq = dataframe_to_point(df_seq, lon_col='PositionLon', lat_col='PositionLat', crs=\"EPSG:4326\", target_crs=\"EPSG:4326\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c2e20da0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "幾何型別分佈：\n",
-      "LineString    103681\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "疑似有問題的筆數：0\n",
-      "Series([], Name: bad_geom_types, dtype: int64)\n",
-      "\n",
-      "前 10 筆問題索引：[]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_12780\\1106237097.py:57: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
-      "  gef_routesegment.to_file(routesegment_filepath,\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\geopandas.py:710: UserWarning: 'crs' was not provided.  The output dataset will not have projection information defined and may not be usable in other systems.\n",
-      "  write(\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'RouteName_Zh' to 'RouteName_'\n",
-      "  ogr_write(\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteUID' to 'SubRouteUI'\n",
-      "  ogr_write(\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\pyogrio\\raw.py:723: RuntimeWarning: Normalized/laundered field name: 'SubRouteName_Zh' to 'SubRouteNa'\n",
-      "  ogr_write(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 03-02 拆分路線\n",
     "routesegment_folder = create_folder(os.path.join(os.getcwd(), '..', \"03_處理後資料\", \"01_公車路線依站序拆分\"))\n",
     "\n",
     "# 先處理SubRouteUID 一致的路線\n",
+    "gdf_route_selectbySubRouteUID = gdf_route[gdf_route['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
+    "gdf_seq_selectbySubRouteUID = gdf_seq[gdf_seq['SubRouteUID'].isin(in_both_subrouteUID)].reset_index(drop=True)\n",
+    "\n",
     "# 將公車站序點位投影到路線上\n",
     "gdf_snapstop_select = snap_points_to_line(gdf_seq_selectbySubRouteUID, gdf_route_selectbySubRouteUID,\n",
     "                                          route_id_col='SubRouteUID',\n",
