feat:加入mark_ticket_errors 並先用迴圈處理檢查票證

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -212,6 +212,24 @@
     "    correctrate = round((canuse_count / original_count) * 100, 1)\n",
     "    return cleaned_tickets, output, correctrate\n",
     "\n",
+    "def mark_ticket_errors(\n",
+    "    tickets, \n",
+    "    on_time_column='on_time_column', \n",
+    "    off_time_column='off_time_column', \n",
+    "    getonstop='GetOnStop', \n",
+    "    getoffstop='GetOffStop', \n",
+    "    getonseq='GetOnSeq', \n",
+    "    getoffseq='GetOffSeq'):\n",
+    "    \"\"\"\n",
+    "    在票證資料上貼三種錯誤標籤，為 0/1。\n",
+    "    不做篩選，不刪資料，只新增欄位。\n",
+    "    \"\"\"\n",
+    "    tickets['error_time'] = (tickets[on_time_column] >= tickets[off_time_column]).astype(int)\n",
+    "    tickets['error_same_stop'] = (tickets[getonstop] == tickets[getoffstop]).astype(int)\n",
+    "    tickets['error_seq'] = (tickets[getonseq] >= tickets[getoffseq]).astype(int)\n",
+    "\n",
+    "    return tickets\n",
+    "\n",
     "def export_ticketcorrectrate(filename, output, correctrate, txt_path):\n",
     "\n",
     "    # 運算時間\n",
@@ -353,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -373,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4b02f38d",
    "metadata": {},
    "outputs": [],
@@ -384,7 +402,6 @@
     "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\公路客運電子票證資料(TO1A)\\公路客運電子票證資料(TO1A).csv', \n",
     "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\新北市公車電子票證資料(TO1A)\\新北市公車電子票證資料(TO1A).csv', \n",
     "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO1A)\\桃園市公車電子票證資料(TO1A).csv', \n",
-    "                                r'D:\\B-Project\\2025\\6800\\Technical\\12票證資料\\2024_2025\\桃園市公車電子票證資料(TO2A)\\桃園市公車電子票證資料(TO2A).csv'\n",
     "                                ]\n",
     "        for file in orginal_ticket_files:\n",
     "                output = filter_ticket_data(\n",
@@ -403,7 +420,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "8f39bedc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 額外處理 -> 為了找到是否有問題的\n",
+    "marked_ticketfolder = create_folder(\n",
+    "    os.path.join(os.getcwd(), '..', '01_初步篩選整理票證', '01-01_指定時間區間票證資料_但有錯誤標記')\n",
+    ")\n",
+    "\n",
+    "selecttime_ticket_files = findfiles(selecttime_ticket_folder, filetype='.csv', recursive=False)\n",
+    "selecttime_ticket_files = [f for f in selecttime_ticket_files if 'TO1' in f]\n",
+    "\n",
+    "for file in selecttime_ticket_files:\n",
+    "    marked_output_file = os.path.join(\n",
+    "        marked_ticketfolder,\n",
+    "        os.path.basename(file).replace(\".csv\", \"_marked.csv\")\n",
+    "    )\n",
+    "\n",
+    "    # 如果 mark_ticket_errors 需要全表上下文，改成 chunksize=None\n",
+    "    reader = pd.read_csv(file, chunksize=1000)\n",
+    "\n",
+    "    first_chunk = True\n",
+    "    for chunk in reader:\n",
+    "        output = mark_ticket_errors(\n",
+    "            tickets=chunk, \n",
+    "            on_time_column='BoardingTime',\n",
+    "            off_time_column='DeboardingTime',\n",
+    "            getonstop='BoardingStopUID',\n",
+    "            getoffstop='DeboardingStopUID',\n",
+    "            getonseq='BoardingStopSequence',\n",
+    "            getoffseq='DeboardingStopSequence'\n",
+    "        )\n",
+    "\n",
+    "        output.to_csv(\n",
+    "            marked_output_file,\n",
+    "            mode='w' if first_chunk else 'a',\n",
+    "            header=first_chunk,\n",
+    "            index=False,\n",
+    "            encoding='utf-8-sig'\n",
+    "        )\n",
+    "        first_chunk = False   # <-- 別忘了這行，後續改為附加寫入\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b3d92724",
    "metadata": {},
    "outputs": [],
@@ -483,149 +546,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2f70d87d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\1792014442.py:6: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file, encoding='utf-8-sig')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:238: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:240: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfboarding['OnorOff'] = 'On'\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:244: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:246: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfdeboarding['OnorOff'] = 'Off'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned_stops.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:238: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:240: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfboarding['OnorOff'] = 'On'\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:244: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:246: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfdeboarding['OnorOff'] = 'Off'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\新北市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned_stops.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:238: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfboarding[select_columns + boarding_stop_columns] = dfboarding[select_columns + boarding_stop_columns].fillna('-99')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:240: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfboarding['OnorOff'] = 'On'\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:244: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfdeboarding[select_columns + deboarding_stop_columns] = dfdeboarding[select_columns+ deboarding_stop_columns].fillna('-99')\n",
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:246: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfdeboarding['OnorOff'] = 'Off'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "站點資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\03_所有使用到的點位\\桃園市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned_stops.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:44: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "第一次比對結果\n",
-      "總共有幾筆資料: 28,812,182\n",
-      "沒有對應經緯度座標的資料異常數量: 1,748,036\n",
-      "影響比例: 6.0670%\n",
-      "============================\n",
-      "第二次比對結果\n",
-      "第二次比對 - 總共有幾筆資料: 1,748,036\n",
-      "第二次比對 - 沒有對應經緯度座標的資料異常數量: 1,395,045\n",
-      "第二次比對 - 影響比例: 79.8064%\n",
-      "第二次比對 - 影響佔可用票證的原始比例: 4.8419%\n",
-      "============================\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 預處理03: 確認所有站點的經緯度在TDX都可以被核對出來\n",
     "\n",
@@ -667,19 +591,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "da6279df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kjchang\\AppData\\Local\\Temp\\ipykernel_17100\\2499398197.py:44: DtypeWarning: Columns (7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(file)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 預處理04: 確認資料各票種、各路線、平假日、起點、迄點筆數\n",
     "files = findfiles(checkok_ticketfolder)\n",
