fix : 好像有疑惑 因為現在票證時間全部都是整點時間

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -228,6 +228,12 @@
     "    tickets['error_same_stop'] = (tickets[getonstop] == tickets[getoffstop]).astype(int)\n",
     "    tickets['error_seq'] = (tickets[getonseq] >= tickets[getoffseq]).astype(int)\n",
     "\n",
+    "    tickets['error'] = (\n",
+    "        (tickets['error_time'] == 1) |\n",
+    "        (tickets['error_same_stop'] == 1) |\n",
+    "        (tickets['error_seq'] == 1)\n",
+    "    ).astype(int)\n",
+    "\n",
     "    return tickets\n",
     "\n",
     "def export_ticketcorrectrate(filename, output, correctrate, txt_path):\n",
@@ -420,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "8f39bedc",
    "metadata": {},
    "outputs": [],
