fix:修正票證清理函數，讓他們變成是只過濾上車時間 > 下車時間

--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "873ae102",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
     "    )\n",
     "\n",
     "    # 檢查每個條件的異常數量\n",
-    "    late_count = (tickets[on_time_column] >= tickets[off_time_column]).sum()\n",
+    "    late_count = (tickets[on_time_column] > tickets[off_time_column]).sum()\n",
     "    same_stop_count = (tickets[getonstop] == tickets[getoffstop]).sum()\n",
     "    seq_error_count = (tickets[getonseq] >= tickets[getoffseq]).sum()\n",
     "    \n",
@@ -224,7 +224,7 @@
     "    在票證資料上貼三種錯誤標籤，為 0/1。\n",
     "    不做篩選，不刪資料，只新增欄位。\n",
     "    \"\"\"\n",
-    "    tickets['error_time'] = (tickets[on_time_column] >= tickets[off_time_column]).astype(int)\n",
+    "    tickets['error_time'] = (tickets[on_time_column] > tickets[off_time_column]).astype(int)\n",
     "    tickets['error_same_stop'] = (tickets[getonstop] == tickets[getoffstop]).astype(int)\n",
     "    tickets['error_seq'] = (tickets[getonseq] >= tickets[getoffseq]).astype(int)\n",
     "\n",
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "8f39bedc",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
     "            index=False,\n",
     "            encoding='utf-8-sig'\n",
     "        )\n",
-    "        first_chunk = False   # <-- 別忘了這行，後續改為附加寫入\n"
+    "        first_chunk = False  \n"
    ]
   },
   {
@@ -547,7 +547,7 @@
     "\n",
     "        print(f\"清洗後資料輸出：{cleaned_output_path}\")\n",
     "\n",
-    "# pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder)"
+    "pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder)"
    ]
   },
   {
