--- a/03_TicketAnalysisCode.ipynb
+++ b/03_TicketAnalysisCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "51662c73",
    "metadata": {},
    "outputs": [],
@@ -168,49 +168,116 @@
     "\n",
     "    return outputpath\n",
     "\n",
-    "def tickets_cleaning(\n",
-    "    tickets, \n",
-    "    on_time_column='on_time_column', \n",
-    "    off_time_column='off_time_column', \n",
-    "    getonstop='GetOnStop', \n",
-    "    getoffstop='GetOffStop', \n",
-    "    getonseq='GetOnSeq', \n",
-    "    getoffseq='GetOffSeq'):\n",
-    "    \"\"\"\n",
-    "    清理票證資料，篩選出符合條件的票證並輸出統計結果。\n",
-    "    可以用於檢查票證資料的正確性。\n",
-    "    \"\"\"\n",
-    "    # 原始票證數量\n",
-    "    original_count = len(tickets)\n",
+    "# def tickets_cleaning(\n",
+    "#     tickets, \n",
+    "#     on_time_column='on_time_column', \n",
+    "#     off_time_column='off_time_column', \n",
+    "#     getonstop='GetOnStop', \n",
+    "#     getoffstop='GetOffStop', \n",
+    "#     getonseq='GetOnSeq', \n",
+    "#     getoffseq='GetOffSeq'):\n",
+    "#     \"\"\"\n",
+    "#     清理票證資料，篩選出符合條件的票證並輸出統計結果。\n",
+    "#     可以用於檢查票證資料的正確性。\n",
+    "#     \"\"\"\n",
+    "#     # 原始票證數量\n",
+    "#     original_count = len(tickets)\n",
     "\n",
-    "    # 建立篩選條件\n",
-    "    valid_conditions = (\n",
-    "        (tickets[on_time_column] < tickets[off_time_column]) &  # 上車時間早於下車時間\n",
-    "        (tickets[getonstop] != tickets[getoffstop]) &  # 上下車站不同\n",
-    "        (tickets[getonseq] < tickets[getoffseq])  # 上下車序正確\n",
-    "    )\n",
+    "#     # 建立篩選條件\n",
+    "#     valid_conditions = (\n",
+    "#         (tickets[on_time_column] < tickets[off_time_column]) &  # 上車時間早於下車時間\n",
+    "#         (tickets[getonstop] != tickets[getoffstop]) &  # 上下車站不同\n",
+    "#         (tickets[getonseq] < tickets[getoffseq])  # 上下車序正確\n",
+    "#     )\n",
     "\n",
-    "    # 檢查每個條件的異常數量\n",
-    "    late_count = (tickets[on_time_column] > tickets[off_time_column]).sum()\n",
-    "    same_stop_count = (tickets[getonstop] == tickets[getoffstop]).sum()\n",
-    "    seq_error_count = (tickets[getonseq] >= tickets[getoffseq]).sum()\n",
+    "#     # 檢查每個條件的異常數量\n",
+    "#     late_count = (tickets[on_time_column] > tickets[off_time_column]).sum()\n",
+    "#     same_stop_count = (tickets[getonstop] == tickets[getoffstop]).sum()\n",
+    "#     seq_error_count = (tickets[getonseq] >= tickets[getoffseq]).sum()\n",
     "    \n",
     "\n",
-    "    # 篩選出符合條件的票證\n",
-    "    cleaned_tickets = tickets[valid_conditions]\n",
-    "    canuse_count = len(cleaned_tickets)\n",
+    "#     # 篩選出符合條件的票證\n",
+    "#     cleaned_tickets = tickets[valid_conditions]\n",
+    "#     canuse_count = len(cleaned_tickets)\n",
     "\n",
-    "    # 統計結果\n",
+    "#     # 統計結果\n",
+    "#     output = {\n",
+    "#         '原始票證數量': original_count,\n",
+    "#         '資料正常':canuse_count, \n",
+    "#         '資料異常 - 上車晚於下車': late_count,\n",
+    "#         '資料異常 - 同站上下車': same_stop_count,\n",
+    "#         '資料異常 - 上下車次序錯誤': seq_error_count\n",
+    "#     }\n",
+    "\n",
+    "#     correctrate = round((canuse_count / original_count) * 100, 1)\n",
+    "#     return cleaned_tickets, output, correctrate\n",
+    "\n",
+    "def tickets_cleaning(\n",
+    "    tickets,\n",
+    "    on_time_column='BoardingTime',\n",
+    "    off_time_column='DeboardingTime',\n",
+    "    getonstop='BoardingStopUID',\n",
+    "    getoffstop='DeboardingStopUID',\n",
+    "    getonseq='BoardingStopSequence',\n",
+    "    getoffseq='DeboardingStopSequence'):\n",
+    "\n",
+    "    n = len(tickets)\n",
+    "\n",
+    "    # ---- 型別轉換（你不把缺值當異常，但比較要正確）----\n",
+    "    on_time  = pd.to_datetime(tickets[on_time_column], errors='coerce')\n",
+    "    off_time = pd.to_datetime(tickets[off_time_column], errors='coerce')\n",
+    "    on_seq   = pd.to_numeric(tickets[getonseq], errors='coerce')\n",
+    "    off_seq  = pd.to_numeric(tickets[getoffseq], errors='coerce')\n",
+    "    on_stop  = tickets[getonstop]\n",
+    "    off_stop = tickets[getoffstop]\n",
+    "\n",
+    "    # ---- 能確定的三種異常（缺值不算異常）----\n",
+    "    m_time_rev  = (on_time > off_time)               # 上車晚於下車\n",
+    "    m_same_stop = (on_stop == off_stop)              # 同站上下車\n",
+    "    m_seq_err   = (on_seq >= off_seq)                # 上序 >= 下序\n",
+    "\n",
+    "    # ---- 資料正常（只有確定異常才算異常，其餘都正常）----\n",
+    "    m_ok = ~(m_time_rev | m_same_stop | m_seq_err)\n",
+    "\n",
+    "    cleaned = tickets[m_ok].copy()\n",
+    "\n",
+    "    # ---------------------------------------------------------\n",
+    "    # ⭐⭐ 依你的要求：新增 ErrorMsg 欄位，描述缺哪些資料（但不當異常）\n",
+    "    # ---------------------------------------------------------\n",
+    "    miss_off_time = off_time.isna()\n",
+    "    miss_off_stop = off_stop.isna()\n",
+    "\n",
+    "    def combine_err(row):\n",
+    "        msgs = []\n",
+    "        if row['miss_off_time']:\n",
+    "            msgs.append(\"沒有下車刷卡時間\")\n",
+    "        if row['miss_off_stop']:\n",
+    "            msgs.append(\"沒有下車站點資料\")\n",
+    "        return \"；\".join(msgs)\n",
+    "\n",
+    "    temp_df = pd.DataFrame({\n",
+    "        \"miss_off_time\": miss_off_time,\n",
+    "        \"miss_off_stop\": miss_off_stop\n",
+    "    })\n",
+    "\n",
+    "    cleaned[\"ErrorMsg\"] = temp_df.loc[cleaned.index].apply(combine_err, axis=1)\n",
+    "    # 若沒有錯誤，改成空字串\n",
+    "    cleaned[\"ErrorMsg\"] = cleaned[\"ErrorMsg\"].replace(\"\", \"\")\n",
+    "\n",
+    "    # ---- 統計輸出 ----\n",
     "    output = {\n",
-    "        '原始票證數量': original_count,\n",
-    "        '資料正常':canuse_count, \n",
-    "        '資料異常 - 上車晚於下車': late_count,\n",
-    "        '資料異常 - 同站上下車': same_stop_count,\n",
-    "        '資料異常 - 上下車次序錯誤': seq_error_count\n",
+    "        '原始票證數量': int(n),\n",
+    "        '資料正常': int(m_ok.sum()),\n",
+    "        '資料異常 - 上車晚於下車': int(m_time_rev.sum()),\n",
+    "        '資料異常 - 同站上下車': int(m_same_stop.sum()),\n",
+    "        '資料異常 - 上下車次序錯誤': int(m_seq_err.sum()),\n",
+    "        # 額外統計（可選）：缺哪些資料\n",
+    "        '資訊缺失 - 沒有下車刷卡時間': int(miss_off_time.sum()),\n",
+    "        '資訊缺失 - 沒有下車站點資料': int(miss_off_stop.sum())\n",
     "    }\n",
     "\n",
-    "    correctrate = round((canuse_count / original_count) * 100, 1)\n",
-    "    return cleaned_tickets, output, correctrate\n",
+    "    correctrate = round((output['資料正常'] / n) * 100, 2) if n else 0.0\n",
+    "    return cleaned, output, correctrate\n",
     "\n",
     "def mark_ticket_errors(\n",
     "    tickets, \n",
@@ -377,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c1428724",
    "metadata": {},
    "outputs": [],
@@ -397,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4b02f38d",
    "metadata": {},
    "outputs": [],
@@ -475,7 +542,24 @@
    "execution_count": null,
    "id": "b3d92724",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== 開始處理：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\01_指定時間區間票證資料\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30.csv ===\n",
+      "TXT (CSV 格式) 已輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\客運票證資料正確率記錄.txt\n",
+      "清洗後資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\公路客運電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned.csv\n",
+      "\n",
+      "=== 開始處理：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\01_指定時間區間票證資料\\新北市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30.csv ===\n",
+      "TXT (CSV 格式) 已輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\客運票證資料正確率記錄.txt\n",
+      "清洗後資料輸出：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\02_過濾可用票證資料\\新北市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30_cleaned.csv\n",
+      "\n",
+      "=== 開始處理：d:\\B-Project\\2025\\6800\\Technical\\12票證資料\\TicketAnalysis\\01_初步篩選整理票證\\01_指定時間區間票證資料\\桃園市公車電子票證資料(TO1A)_2024-10-01_to_2024-11-30.csv ===\n"
+     ]
+    }
+   ],
    "source": [
     "# 預處理02: 指定時間區間票證資料切分\n",
     "def pre02_get_correct_tickets(selecttime_ticket_folder, checkok_ticketfolder):\n",
